@@ -2,7 +2,10 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+  - Consume PluginRemover role to get '-remove' magically
+
 3.202     2011-11-19T18:25:57Z
+
   - Put 'Changes' back into @Git's allow_dirty
   - Reorder plugins so ConfirmRelease is last BeforeRelease
 
